# textlite

./: README.md  pyproject.toml
tests/: conftest.py  test_clustering.py  test_compression.py  test_deduplication.py  test_keyphrases.py  test_summarization.py  test_topics.py
textlite/: __init__.py  clustering.py  compression.py  deduplication.py  embeddings.py  keyphrases.py  requirements.txt  summarization.py  topics.py  types.py  utils.py
